feat: add and delete attachments
